<resources>
    <!-- App -->
    <string name="app_name">iti0213-2019s-hw2</string>

    <string name="title_activity_main">Navigation</string>
    <string name="title_activity_session">Sessions</string>

    <string name="controls_map_mode">North-Up</string>
    <string name="controls_reset">Reset</string>
    <string name="controls_compass">Compass</string>
    <string name="controls_sessions">Sessions</string>

    <!-- Map navigation -->
    <string name="session_distance_placeholder">----</string>
    <string name="session_duration_placeholder">-:--:--</string>
    <string name="session_speed_placeholder">-:--</string>
    <string name="distance_cp_to_current_placeholder">---</string>
    <string name="direct_distance_cp_to_current_placeholder">---</string>
    <string name="cp_speed_placeholder">-:--</string>
    <string name="distance_wp_to_current_placeholder">- ---</string>
    <string name="direct_distance_wp_to_current_placeholder">- ---</string>
    <string name="wp_speed_placeholder">-:--</string>
    <string name="session_label_start_time">"Start time: "</string>
    <string name="session_label_end_time">"End time: "</string>
    <string name="datetime_placeholder">--:--:-- | --/--/----</string>
    <string name="session_label_locations">"Locations: "</string>
    <string name="session_label_locations_placeholder">0</string>
    <string name="session_label_checkpoints_placeholder">0</string>
    <string name="session_label_waypoints_placeholder">0</string>
    <string name="session_label_checkpoints">"Checkpoints: "</string>
    <string name="session_label_waypoints">"Waypoints: "</string>
    <string name="session_title_placeholder">Session title:</string>
    <string name="session_stop_confirmation">Are you sure that you want to stop the current session?</string>
    <string name="dialog_optimal_speed">Optimal speed range for the session:</string>
    <string name="dialog_optimal_speed_units">min/km</string>
    <string name="dialog_optimal_speed_separator">—</string>
    <string name="session_label_distance">Distance: </string>
    <string name="session_dialog_description_placeholder">"Session description: "</string>
    <string name="session_deletion_confirmation">Are you sure that you want to delete the session?</string>
    <string name="dialog_login_label_email">"Email: "</string>
    <string name="session_login_label_password">"Password: "</string>
    <string name="dialog_registration_label_first_name">"First name: "</string>
    <string name="dialog_registration_label_last_name">"Last name: "</string>
</resources>
