<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/session_label_start_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/session_label_start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_title_text_view" />

    <TextView
        android:id="@+id/session_start_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/datetime_placeholder"
        app:layout_constraintStart_toEndOf="@+id/session_label_start_time_text_view"
        app:layout_constraintTop_toTopOf="@+id/session_label_start_time_text_view" />

    <TextView
        android:id="@+id/session_locations_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/session_label_locations_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/session_label_locations_text_view" />

    <TextView
        android:id="@+id/session_label_locations_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_label_locations"
        app:layout_constraintEnd_toEndOf="@+id/session_label_checkpoints_text_view"
        app:layout_constraintTop_toTopOf="@+id/session_label_start_time_text_view" />

    <TextView
        android:id="@+id/session_label_checkpoints_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/session_label_checkpoints"
        app:layout_constraintEnd_toStartOf="@+id/session_checkpoints_text_view"
        app:layout_constraintTop_toBottomOf="@+id/session_label_locations_text_view" />

    <TextView
        android:id="@+id/session_label_waypoints_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/session_label_waypoints"
        app:layout_constraintEnd_toEndOf="@+id/session_label_checkpoints_text_view"
        app:layout_constraintTop_toBottomOf="@+id/session_label_checkpoints_text_view" />

    <TextView
        android:id="@+id/session_checkpoints_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/session_label_checkpoints_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_locations_text_view" />

    <TextView
        android:id="@+id/session_waypoints_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/session_label_waypoints_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_checkpoints_text_view" />

    <TextView
        android:id="@+id/session_label_end_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/session_label_end_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_label_start_time_text_view" />

    <TextView
        android:id="@+id/session_end_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/datetime_placeholder"
        app:layout_constraintStart_toEndOf="@+id/session_label_start_time_text_view"
        app:layout_constraintTop_toTopOf="@+id/session_label_end_time_text_view" />

    <TextView
        android:id="@+id/session_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/session_title_placeholder"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/session_label_distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/session_label_distance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_label_end_time_text_view" />

    <TextView
        android:id="@+id/session_distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/session_distance_placeholder"
        app:layout_constraintStart_toEndOf="@+id/session_label_start_time_text_view"
        app:layout_constraintTop_toTopOf="@+id/session_label_distance_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>