<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal"
    android:elevation="1dp"
    android:alpha="0.8">

    <ImageButton
        android:id="@+id/start_stop_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_play_arrow_black" />

    <LinearLayout
        android:id="@+id/session"
        style="@style/map_navigation_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            style="@style/navigation_info"
            android:id="@+id/session_distance_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="5000" />

        <TextView
            style="@style/navigation_info"
            android:id="@+id/session_duration_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/session_duration_placeholder" />

        <TextView
            style="@style/navigation_info"
            android:id="@+id/session_speed_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/session_speed_placeholder" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/cp_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_add_location" />

    <LinearLayout
        android:id="@+id/checkpoint"
        style="@style/map_navigation_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            style="@style/navigation_info"
            android:id="@+id/distance_cp_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_cp_to_current_placeholder" />

        <TextView
            style="@style/navigation_info"
            android:id="@+id/direct_distance_cp_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direct_distance_cp_to_current_placeholder" />

        <TextView
            style="@style/navigation_info"
            android:id="@+id/cp_speed_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cp_speed_placeholder" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/wp_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_place_black" />

    <LinearLayout
        android:id="@+id/waypoint"
        style="@style/map_navigation_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            style="@style/navigation_info"
            android:id="@+id/distance_wp_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_wp_to_current_placeholder" />

        <TextView
            style="@style/navigation_info"
            android:id="@+id/direct_distance_wp_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direct_distance_wp_to_current_placeholder" />

        <TextView
            style="@style/navigation_info"
            android:id="@+id/wp_speed_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wp_speed_placeholder" />
    </LinearLayout>


</LinearLayout>