<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map_controls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="1dp">

    <ToggleButton
        android:id="@+id/controls_mode_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:checked="false"
        android:textOff="@string/controls_map_mode"
        android:textOn="@string/controls_map_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/controls_reset_btn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/controls_reset_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/controls_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/controls_compass_btn"
        app:layout_constraintStart_toEndOf="@+id/controls_mode_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/controls_compass_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/controls_options"
        android:textOff="@string/controls_compass"
        android:textOn="@string/controls_compass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/controls_options_btn"
        app:layout_constraintStart_toEndOf="@+id/controls_reset_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/controls_options_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/controls_options"
        android:textOff="@string/controls_compass"
        android:textOn="@string/controls_compass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/controls_compass_btn"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>