<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_optimal_speed_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dialog_optimal_speed"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_optimal_speed_units_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dialog_optimal_speed_units"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_optimal_speed_max_edit_text"
        app:layout_constraintStart_toEndOf="@+id/dialog_optimal_speed_max_edit_text"
        app:layout_constraintTop_toTopOf="@+id/dialog_optimal_speed_max_edit_text" />

    <EditText
        android:id="@+id/dialog_optimal_speed_min_edit_text"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_optimal_speed_text_view" />

    <EditText
        android:id="@+id/dialog_optimal_speed_max_edit_text"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_optimal_speed_range_separator_text_view"
        app:layout_constraintTop_toBottomOf="@+id/dialog_optimal_speed_text_view" />

    <TextView
        android:id="@+id/dialog_optimal_speed_range_separator_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dialog_optimal_speed_separator"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_optimal_speed_min_edit_text"
        app:layout_constraintStart_toEndOf="@+id/dialog_optimal_speed_min_edit_text"
        app:layout_constraintTop_toTopOf="@+id/dialog_optimal_speed_min_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>